seaqt/QtWidgets/gen_qheaderview.h

typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHeaderView QHeaderView;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QItemSelection QItemSelection;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QModelIndex QModelIndex;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionHeader QStyleOptionHeader;
typedef struct QStyleOptionViewItem QStyleOptionViewItem;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
void QHeaderView_connect_sectionMoved(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int, int, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionResized(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int, int, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionPressed(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionClicked(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionEntered(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionDoubleClicked(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionCountChanged(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionHandleDoubleClicked(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_connect_geometriesChanged(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
void QHeaderView_connect_sortIndicatorChanged(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
QSize* QHeaderView_virtualbase_sectionSizeFromContents(const void* self, int logicalIndex);
int QHeaderView_virtualbase_horizontalOffset(const void* self);
int QHeaderView_virtualbase_verticalOffset(const void* self);
void QHeaderView_virtualbase_updateGeometries(void* self);
void QHeaderView_virtualbase_scrollContentsBy(void* self, int dx, int dy);
void QHeaderView_virtualbase_dataChanged(void* self, QModelIndex* topLeft, QModelIndex* bottomRight, struct miqt_array /* of int */  roles);
void QHeaderView_virtualbase_rowsInserted(void* self, QModelIndex* parent, int start, int end);
QRect* QHeaderView_virtualbase_visualRect(const void* self, QModelIndex* index);
void QHeaderView_virtualbase_scrollTo(void* self, QModelIndex* index, int hint);
QModelIndex* QHeaderView_virtualbase_indexAt(const void* self, QPoint* p);
bool QHeaderView_virtualbase_isIndexHidden(const void* self, QModelIndex* index);
QModelIndex* QHeaderView_virtualbase_moveCursor(void* self, int param1, int param2);
void QHeaderView_virtualbase_setSelection(void* self, QRect* rect, int flags);
QRegion* QHeaderView_virtualbase_visualRegionForSelection(const void* self, QItemSelection* selection);
void QHeaderView_virtualbase_setSelectionModel(void* self, QItemSelectionModel* selectionModel);
void QHeaderView_virtualbase_keyboardSearch(void* self, struct miqt_string search);
int QHeaderView_virtualbase_sizeHintForRow(const void* self, int row);
int QHeaderView_virtualbase_sizeHintForColumn(const void* self, int column);
QVariant* QHeaderView_virtualbase_inputMethodQuery(const void* self, int query);
void QHeaderView_virtualbase_setRootIndex(void* self, QModelIndex* index);
void QHeaderView_virtualbase_selectAll(void* self);
void QHeaderView_virtualbase_rowsAboutToBeRemoved(void* self, QModelIndex* parent, int start, int end);
void QHeaderView_virtualbase_selectionChanged(void* self, QItemSelection* selected, QItemSelection* deselected);
void QHeaderView_virtualbase_updateEditorData(void* self);
void QHeaderView_virtualbase_updateEditorGeometries(void* self);
void QHeaderView_virtualbase_verticalScrollbarAction(void* self, int action);
void QHeaderView_virtualbase_horizontalScrollbarAction(void* self, int action);
void QHeaderView_virtualbase_verticalScrollbarValueChanged(void* self, int value);
void QHeaderView_virtualbase_horizontalScrollbarValueChanged(void* self, int value);
void QHeaderView_virtualbase_closeEditor(void* self, QWidget* editor, int hint);
void QHeaderView_virtualbase_commitData(void* self, QWidget* editor);
void QHeaderView_virtualbase_editorDestroyed(void* self, QObject* editor);
struct miqt_array /* of QModelIndex* */  QHeaderView_virtualbase_selectedIndexes(const void* self);
bool QHeaderView_virtualbase_edit2(void* self, QModelIndex* index, int trigger, QEvent* event);
int QHeaderView_virtualbase_selectionCommand(const void* self, QModelIndex* index, QEvent* event);
void QHeaderView_virtualbase_startDrag(void* self, int supportedActions);
QStyleOptionViewItem* QHeaderView_virtualbase_viewOptions(const void* self);
bool QHeaderView_virtualbase_focusNextPrevChild(void* self, bool next);
void QHeaderView_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
void QHeaderView_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
void QHeaderView_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
void QHeaderView_virtualbase_dropEvent(void* self, QDropEvent* event);
void QHeaderView_virtualbase_focusInEvent(void* self, QFocusEvent* event);
void QHeaderView_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
void QHeaderView_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
void QHeaderView_virtualbase_resizeEvent(void* self, QResizeEvent* event);
void QHeaderView_virtualbase_timerEvent(void* self, QTimerEvent* event);
void QHeaderView_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* event);
bool QHeaderView_virtualbase_eventFilter(void* self, QObject* object, QEvent* event);
QSize* QHeaderView_virtualbase_viewportSizeHint(const void* self);
QSize* QHeaderView_virtualbase_minimumSizeHint(const void* self);
void QHeaderView_virtualbase_setupViewport(void* self, QWidget* viewport);
void QHeaderView_virtualbase_wheelEvent(void* self, QWheelEvent* param1);
void QHeaderView_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* param1);
void QHeaderView_virtualbase_changeEvent(void* self, QEvent* param1);
int QHeaderView_virtualbase_devType(const void* self);
int QHeaderView_virtualbase_heightForWidth(const void* self, int param1);
bool QHeaderView_virtualbase_hasHeightForWidth(const void* self);
QPaintEngine* QHeaderView_virtualbase_paintEngine(const void* self);
void QHeaderView_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
void QHeaderView_virtualbase_enterEvent(void* self, QEvent* event);
void QHeaderView_virtualbase_leaveEvent(void* self, QEvent* event);
void QHeaderView_virtualbase_moveEvent(void* self, QMoveEvent* event);
void QHeaderView_virtualbase_closeEvent(void* self, QCloseEvent* event);
void QHeaderView_virtualbase_tabletEvent(void* self, QTabletEvent* event);
void QHeaderView_virtualbase_actionEvent(void* self, QActionEvent* event);
void QHeaderView_virtualbase_showEvent(void* self, QShowEvent* event);
void QHeaderView_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QHeaderView_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
int QHeaderView_virtualbase_metric(const void* self, int param1);
void QHeaderView_virtualbase_initPainter(const void* self, QPainter* painter);
QPaintDevice* QHeaderView_virtualbase_redirected(const void* self, QPoint* offset);
QPainter* QHeaderView_virtualbase_sharedPainter(const void* self);
void QHeaderView_virtualbase_childEvent(void* self, QChildEvent* event);
void QHeaderView_virtualbase_customEvent(void* self, QEvent* event);
void QHeaderView_virtualbase_connectNotify(void* self, QMetaMethod* signal);
void QHeaderView_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QHeaderView_protectedbase_updateSection(void* self, int logicalIndex);
void QHeaderView_protectedbase_resizeSections2(void* self);
void QHeaderView_protectedbase_sectionsInserted(void* self, QModelIndex* parent, int logicalFirst, int logicalLast);
void QHeaderView_protectedbase_sectionsAboutToBeRemoved(void* self, QModelIndex* parent, int logicalFirst, int logicalLast);
void QHeaderView_protectedbase_initialize(void* self);
void QHeaderView_protectedbase_initializeSections(void* self);
void QHeaderView_protectedbase_initializeSections2(void* self, int start, int end);
void QHeaderView_protectedbase_initStyleOption(const void* self, QStyleOptionHeader* option);