seaqt/QtWidgets/gen_qheaderview.nim

proc fcQHeaderView_virtualbase_sectionSizeFromContents(self: pointer, logicalIndex: cint): pointer {.importc: "QHeaderView_virtualbase_sectionSizeFromContents".}
proc fcQHeaderView_virtualbase_horizontalOffset(self: pointer, ): cint {.importc: "QHeaderView_virtualbase_horizontalOffset".}
proc fcQHeaderView_virtualbase_verticalOffset(self: pointer, ): cint {.importc: "QHeaderView_virtualbase_verticalOffset".}
proc fcQHeaderView_virtualbase_updateGeometries(self: pointer, ): void {.importc: "QHeaderView_virtualbase_updateGeometries".}
proc fcQHeaderView_virtualbase_scrollContentsBy(self: pointer, dx: cint, dy: cint): void {.importc: "QHeaderView_virtualbase_scrollContentsBy".}
proc fcQHeaderView_virtualbase_dataChanged(self: pointer, topLeft: pointer, bottomRight: pointer, roles: struct_miqt_array): void {.importc: "QHeaderView_virtualbase_dataChanged".}
proc fcQHeaderView_virtualbase_rowsInserted(self: pointer, parent: pointer, start: cint, endVal: cint): void {.importc: "QHeaderView_virtualbase_rowsInserted".}
proc fcQHeaderView_virtualbase_visualRect(self: pointer, index: pointer): pointer {.importc: "QHeaderView_virtualbase_visualRect".}
proc fcQHeaderView_virtualbase_scrollTo(self: pointer, index: pointer, hint: cint): void {.importc: "QHeaderView_virtualbase_scrollTo".}
proc fcQHeaderView_virtualbase_indexAt(self: pointer, p: pointer): pointer {.importc: "QHeaderView_virtualbase_indexAt".}
proc fcQHeaderView_virtualbase_isIndexHidden(self: pointer, index: pointer): bool {.importc: "QHeaderView_virtualbase_isIndexHidden".}
proc fcQHeaderView_virtualbase_moveCursor(self: pointer, param1: cint, param2: cint): pointer {.importc: "QHeaderView_virtualbase_moveCursor".}
proc fcQHeaderView_virtualbase_setSelection(self: pointer, rect: pointer, flags: cint): void {.importc: "QHeaderView_virtualbase_setSelection".}
proc fcQHeaderView_virtualbase_visualRegionForSelection(self: pointer, selection: pointer): pointer {.importc: "QHeaderView_virtualbase_visualRegionForSelection".}
proc fcQHeaderView_virtualbase_setSelectionModel(self: pointer, selectionModel: pointer): void {.importc: "QHeaderView_virtualbase_setSelectionModel".}
proc fcQHeaderView_virtualbase_keyboardSearch(self: pointer, search: struct_miqt_string): void {.importc: "QHeaderView_virtualbase_keyboardSearch".}
proc fcQHeaderView_virtualbase_sizeHintForRow(self: pointer, row: cint): cint {.importc: "QHeaderView_virtualbase_sizeHintForRow".}
proc fcQHeaderView_virtualbase_sizeHintForColumn(self: pointer, column: cint): cint {.importc: "QHeaderView_virtualbase_sizeHintForColumn".}
proc fcQHeaderView_virtualbase_inputMethodQuery(self: pointer, query: cint): pointer {.importc: "QHeaderView_virtualbase_inputMethodQuery".}
proc fcQHeaderView_virtualbase_setRootIndex(self: pointer, index: pointer): void {.importc: "QHeaderView_virtualbase_setRootIndex".}
proc fcQHeaderView_virtualbase_selectAll(self: pointer, ): void {.importc: "QHeaderView_virtualbase_selectAll".}
proc fcQHeaderView_virtualbase_rowsAboutToBeRemoved(self: pointer, parent: pointer, start: cint, endVal: cint): void {.importc: "QHeaderView_virtualbase_rowsAboutToBeRemoved".}
proc fcQHeaderView_virtualbase_selectionChanged(self: pointer, selected: pointer, deselected: pointer): void {.importc: "QHeaderView_virtualbase_selectionChanged".}
proc fcQHeaderView_virtualbase_updateEditorData(self: pointer, ): void {.importc: "QHeaderView_virtualbase_updateEditorData".}
proc fcQHeaderView_virtualbase_updateEditorGeometries(self: pointer, ): void {.importc: "QHeaderView_virtualbase_updateEditorGeometries".}
proc fcQHeaderView_virtualbase_verticalScrollbarAction(self: pointer, action: cint): void {.importc: "QHeaderView_virtualbase_verticalScrollbarAction".}
proc fcQHeaderView_virtualbase_horizontalScrollbarAction(self: pointer, action: cint): void {.importc: "QHeaderView_virtualbase_horizontalScrollbarAction".}
proc fcQHeaderView_virtualbase_verticalScrollbarValueChanged(self: pointer, value: cint): void {.importc: "QHeaderView_virtualbase_verticalScrollbarValueChanged".}
proc fcQHeaderView_virtualbase_horizontalScrollbarValueChanged(self: pointer, value: cint): void {.importc: "QHeaderView_virtualbase_horizontalScrollbarValueChanged".}
proc fcQHeaderView_virtualbase_closeEditor(self: pointer, editor: pointer, hint: cint): void {.importc: "QHeaderView_virtualbase_closeEditor".}
proc fcQHeaderView_virtualbase_commitData(self: pointer, editor: pointer): void {.importc: "QHeaderView_virtualbase_commitData".}
proc fcQHeaderView_virtualbase_editorDestroyed(self: pointer, editor: pointer): void {.importc: "QHeaderView_virtualbase_editorDestroyed".}
proc fcQHeaderView_virtualbase_selectedIndexes(self: pointer, ): struct_miqt_array {.importc: "QHeaderView_virtualbase_selectedIndexes".}
proc fcQHeaderView_virtualbase_edit2(self: pointer, index: pointer, trigger: cint, event: pointer): bool {.importc: "QHeaderView_virtualbase_edit2".}
proc fcQHeaderView_virtualbase_selectionCommand(self: pointer, index: pointer, event: pointer): cint {.importc: "QHeaderView_virtualbase_selectionCommand".}
proc fcQHeaderView_virtualbase_startDrag(self: pointer, supportedActions: cint): void {.importc: "QHeaderView_virtualbase_startDrag".}
proc fcQHeaderView_virtualbase_viewOptions(self: pointer, ): pointer {.importc: "QHeaderView_virtualbase_viewOptions".}
proc fcQHeaderView_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool {.importc: "QHeaderView_virtualbase_focusNextPrevChild".}
proc fcQHeaderView_virtualbase_dragEnterEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_dragEnterEvent".}
proc fcQHeaderView_virtualbase_dragMoveEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_dragMoveEvent".}
proc fcQHeaderView_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_dragLeaveEvent".}
proc fcQHeaderView_virtualbase_dropEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_dropEvent".}
proc fcQHeaderView_virtualbase_focusInEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_focusInEvent".}
proc fcQHeaderView_virtualbase_focusOutEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_focusOutEvent".}
proc fcQHeaderView_virtualbase_keyPressEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_keyPressEvent".}
proc fcQHeaderView_virtualbase_resizeEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_resizeEvent".}
proc fcQHeaderView_virtualbase_timerEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_timerEvent".}
proc fcQHeaderView_virtualbase_inputMethodEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_inputMethodEvent".}
proc fcQHeaderView_virtualbase_eventFilter(self: pointer, objectVal: pointer, event: pointer): bool {.importc: "QHeaderView_virtualbase_eventFilter".}
proc fcQHeaderView_virtualbase_viewportSizeHint(self: pointer, ): pointer {.importc: "QHeaderView_virtualbase_viewportSizeHint".}
proc fcQHeaderView_virtualbase_minimumSizeHint(self: pointer, ): pointer {.importc: "QHeaderView_virtualbase_minimumSizeHint".}
proc fcQHeaderView_virtualbase_setupViewport(self: pointer, viewport: pointer): void {.importc: "QHeaderView_virtualbase_setupViewport".}
proc fcQHeaderView_virtualbase_wheelEvent(self: pointer, param1: pointer): void {.importc: "QHeaderView_virtualbase_wheelEvent".}
proc fcQHeaderView_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void {.importc: "QHeaderView_virtualbase_contextMenuEvent".}
proc fcQHeaderView_virtualbase_changeEvent(self: pointer, param1: pointer): void {.importc: "QHeaderView_virtualbase_changeEvent".}
proc fcQHeaderView_virtualbase_devType(self: pointer, ): cint {.importc: "QHeaderView_virtualbase_devType".}
proc fcQHeaderView_virtualbase_heightForWidth(self: pointer, param1: cint): cint {.importc: "QHeaderView_virtualbase_heightForWidth".}
proc fcQHeaderView_virtualbase_hasHeightForWidth(self: pointer, ): bool {.importc: "QHeaderView_virtualbase_hasHeightForWidth".}
proc fcQHeaderView_virtualbase_paintEngine(self: pointer, ): pointer {.importc: "QHeaderView_virtualbase_paintEngine".}
proc fcQHeaderView_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_keyReleaseEvent".}
proc fcQHeaderView_virtualbase_enterEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_enterEvent".}
proc fcQHeaderView_virtualbase_leaveEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_leaveEvent".}
proc fcQHeaderView_virtualbase_moveEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_moveEvent".}
proc fcQHeaderView_virtualbase_closeEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_closeEvent".}
proc fcQHeaderView_virtualbase_tabletEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_tabletEvent".}
proc fcQHeaderView_virtualbase_actionEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_actionEvent".}
proc fcQHeaderView_virtualbase_showEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_showEvent".}
proc fcQHeaderView_virtualbase_hideEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_hideEvent".}
proc fcQHeaderView_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool {.importc: "QHeaderView_virtualbase_nativeEvent".}
proc fcQHeaderView_virtualbase_metric(self: pointer, param1: cint): cint {.importc: "QHeaderView_virtualbase_metric".}
proc fcQHeaderView_virtualbase_initPainter(self: pointer, painter: pointer): void {.importc: "QHeaderView_virtualbase_initPainter".}
proc fcQHeaderView_virtualbase_redirected(self: pointer, offset: pointer): pointer {.importc: "QHeaderView_virtualbase_redirected".}
proc fcQHeaderView_virtualbase_sharedPainter(self: pointer, ): pointer {.importc: "QHeaderView_virtualbase_sharedPainter".}
proc fcQHeaderView_virtualbase_childEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_childEvent".}
proc fcQHeaderView_virtualbase_customEvent(self: pointer, event: pointer): void {.importc: "QHeaderView_virtualbase_customEvent".}
proc fcQHeaderView_virtualbase_connectNotify(self: pointer, signal: pointer): void {.importc: "QHeaderView_virtualbase_connectNotify".}
proc fcQHeaderView_virtualbase_disconnectNotify(self: pointer, signal: pointer): void {.importc: "QHeaderView_virtualbase_disconnectNotify".}
proc fcQHeaderView_protectedbase_updateSection(self: pointer, logicalIndex: cint): void {.importc: "QHeaderView_protectedbase_updateSection".}
proc fcQHeaderView_protectedbase_resizeSections2(self: pointer, ): void {.importc: "QHeaderView_protectedbase_resizeSections2".}
proc fcQHeaderView_protectedbase_sectionsInserted(self: pointer, parent: pointer, logicalFirst: cint, logicalLast: cint): void {.importc: "QHeaderView_protectedbase_sectionsInserted".}
proc fcQHeaderView_protectedbase_sectionsAboutToBeRemoved(self: pointer, parent: pointer, logicalFirst: cint, logicalLast: cint): void {.importc: "QHeaderView_protectedbase_sectionsAboutToBeRemoved".}
proc fcQHeaderView_protectedbase_initialize(self: pointer, ): void {.importc: "QHeaderView_protectedbase_initialize".}
proc fcQHeaderView_protectedbase_initializeSections(self: pointer, ): void {.importc: "QHeaderView_protectedbase_initializeSections".}
proc fcQHeaderView_protectedbase_initializeSections2(self: pointer, start: cint, endVal: cint): void {.importc: "QHeaderView_protectedbase_initializeSections2".}
proc fcQHeaderView_protectedbase_initStyleOption(self: pointer, option: pointer): void {.importc: "QHeaderView_protectedbase_initStyleOption".}
